fix content overflow in CardExhibition

--- a/src/components/CardExhibition/index.scss
+++ b/src/components/CardExhibition/index.scss
@@ -51,6 +51,7 @@
     }
   }
   &__content {
+    overflow: hidden;
     width: calc(100% - 298px);
     @media (max-width: 560px) {
       width: 100%;
